--- a/python/problem_002.ipynb
+++ b/python/problem_002.ipynb
@@ -19,22 +19,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python v3.11.9\n"
+      "Python v3.11.10\n"
      ]
     }
    ],
    "source": [
     "print('Python v{}'.format(__import__('sys').version.split()[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9d520d08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import euler"
    ]
   },
   {
@@ -47,8 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8ce31b20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibonacci(n):\n",
+    "    fib_seq = [1, 2]\n",
+    "    while sum(fib_seq[-2:]) <= n:\n",
+    "        fib_seq.append(sum(fib_seq[-2:]))\n",
+    "    return fib_seq\n",
+    "\n",
+    "assert fibonacci(100) == [1, 2, 3, 5, 8, 13, 21, 34, 55, 89]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b76c0cdd",
    "metadata": {},
    "outputs": [
     {
@@ -64,12 +70,6 @@
    ],
    "source": [
     "# answer\n",
-    "def fibonacci(n):\n",
-    "    fib_seq = [1, 2]\n",
-    "    while sum(fib_seq[-2:]) <= n:\n",
-    "        fib_seq.append(sum(fib_seq[-2:]))\n",
-    "    return fib_seq\n",
-    "\n",
     "sum(f for f in fibonacci(4_000_000) if f%2 == 0)"
    ]
   },
@@ -83,14 +83,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.67 μs ± 457 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "5.93 μs ± 5.08 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "b = %timeit -o sum(f for f in fibonacci(4_000_000) if f%2 == 0)\n",
-    "euler.save_benchmark(2, b)"
+    "%timeit sum(f for f in fibonacci(4_000_000) if f%2 == 0)"
    ]
   },
   {
@@ -106,20 +105,8 @@
    "execution_count": 5,
    "id": "85bacd8b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4613732"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# answer\n",
     "def sum_even_fib(n):\n",
     "    fib_seq = [1, 2]\n",
     "    fib_sum = fib_seq[-1]\n",
@@ -130,12 +117,34 @@
     "            fib_sum += fib_seq[-1]\n",
     "    return fib_sum\n",
     "\n",
-    "sum_even_fib(4_000_000)"
+    "assert sum_even_fib(100) == 44"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "b614e851",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4613732"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "sum_even_fib(4_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "2c58e650",
    "metadata": {},
    "outputs": [
@@ -143,14 +152,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.48 μs ± 281 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "6.96 μs ± 191 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "b = %timeit -o sum_even_fib(4_000_000)\n",
-    "euler.save_benchmark(2, b)"
+    "%timeit sum_even_fib(4_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56bf2025",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f63ab675",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.95 μs ± 3.11 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o sum(f for f in fibonacci(4_000_000) if f%2 == 0)\n",
+    "import euler\n",
+    "euler.save_benchmark(2, bm)"
    ]
   }
  ],
