--- a/python/problem_004.ipynb
+++ b/python/problem_004.ipynb
@@ -28,16 +28,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0fcdc37f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import euler"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "9e370dc7",
    "metadata": {},
@@ -47,8 +37,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cd0ba455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def largest_palindrome_product(digits):\n",
+    "    lo, hi = 10**(digits-1), (10**digits)-1\n",
+    "    r = range(lo, hi+1)\n",
+    "    palindrome_products = []\n",
+    "    for n in r:\n",
+    "        for m in r:\n",
+    "            p = n*m # product\n",
+    "            if str(p) == str(p)[::-1]:\n",
+    "                palindrome_products.append(p)\n",
+    "    return max(palindrome_products)\n",
+    "\n",
+    "assert largest_palindrome_product(2) == 9009"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0f71d524",
    "metadata": {},
    "outputs": [
     {
@@ -64,17 +75,6 @@
    ],
    "source": [
     "# answer\n",
-    "def largest_palindrome_product(digits):\n",
-    "    lo, hi = 10**(digits-1), (10**digits)-1\n",
-    "    r = range(lo, hi+1)\n",
-    "    palindrome_products = []\n",
-    "    for n in r:\n",
-    "        for m in r:\n",
-    "            p = n*m # product\n",
-    "            if str(p) == str(p)[::-1]:\n",
-    "                palindrome_products.append(p)\n",
-    "    return max(palindrome_products)\n",
-    "\n",
     "largest_palindrome_product(3)"
    ]
   },
@@ -88,14 +88,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "138 ms ± 5.32 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "138 ms ± 2.39 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "b = %timeit -o largest_palindrome_product(3)\n",
-    "euler.save_benchmark(4, b)"
+    "%timeit largest_palindrome_product(3)"
    ]
   },
   {
@@ -111,20 +110,8 @@
    "execution_count": 5,
    "id": "7fcca0bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "906609"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# answer\n",
     "def largest_palindrome_product(digits):\n",
     "    lo, hi = 10**(digits-1), (10**digits)-1\n",
     "    r = range(lo, hi+1)\n",
@@ -136,12 +123,34 @@
     "                lpp = p\n",
     "    return lpp\n",
     "\n",
-    "largest_palindrome_product(3)"
+    "assert largest_palindrome_product(2) == 9009"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "55c8a4e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "largest_palindrome_product(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "34e30dde",
    "metadata": {},
    "outputs": [
@@ -149,14 +158,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "134 ms ± 5.38 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "134 ms ± 6.06 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "b = %timeit -o largest_palindrome_product(3)\n",
-    "euler.save_benchmark(4, b)"
+    "%timeit largest_palindrome_product(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "024c2e92",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8ea2f61c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "130 ms ± 4.02 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o largest_palindrome_product(3)\n",
+    "import euler\n",
+    "euler.save_benchmark(4, bm)"
    ]
   }
  ],
