--- a/python/problem_005.ipynb
+++ b/python/problem_005.ipynb
@@ -5,18 +5,36 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 5\n",
+    "# Problem 5\n",
     "https://projecteuler.net/problem=5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "54a5bd61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "570ff717",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import euler"
+    "import math"
    ]
   },
   {
@@ -29,22 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4a53b3ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def smallest_multiple_brute_force(n=20):\n",
-    "    x = 1\n",
-    "    while not all([x%i == 0 for i in range(1, n+1)]):\n",
-    "        x += 1\n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "c2b48784",
+   "id": "4a53b3ca",
    "metadata": {},
    "outputs": [
     {
@@ -59,117 +63,87 @@
     }
    ],
    "source": [
-    "smallest_multiple_brute_force(n=20)"
+    "# answer\n",
+    "def smallest_multiple(n):\n",
+    "    x = n\n",
+    "    while not all([x%i == 0 for i in range(2, n)]):\n",
+    "        x += n\n",
+    "    return x\n",
+    "\n",
+    "smallest_multiple(20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c7e4c4c9",
+   "id": "fbe22f60",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3min 11s ± 4.32 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "8.94 s ± 186 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o smallest_multiple_brute_force(n=20)\n",
-    "euler.save_benchmark(5, t)"
+    "# benchmark\n",
+    "%timeit smallest_multiple(20)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "62f176ee",
+   "id": "8f97122d",
    "metadata": {},
    "source": [
-    "#### Solution 2 (factors)"
+    "### Solution 2 (divisors)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e8875591",
+   "id": "7121cef8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def factors(n):\n",
-    "    facs = []\n",
-    "    for i in range(1, n+1):\n",
-    "        if n%i == 0:\n",
-    "            facs.append(i)\n",
-    "    return facs"
+    "def divisor(n):\n",
+    "    d = [] # divisors\n",
+    "    i = 1\n",
+    "    while i <= n**.5:\n",
+    "        if (n%i == 0):\n",
+    "            if (n/i == i):\n",
+    "                d.append(i)\n",
+    "            else:\n",
+    "                d.extend([i, int(n/i)])\n",
+    "        i += 1\n",
+    "    return sorted(d)\n",
+    "\n",
+    "assert divisor(10) == [1, 2, 5, 10]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8716ab1e",
+   "id": "db0fc8ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 : [1]\n",
-      "2 : [1, 2]\n",
-      "3 : [1, 3]\n",
-      "4 : [1, 2, 4]\n",
-      "5 : [1, 5]\n",
-      "6 : [1, 2, 3, 6]\n",
-      "7 : [1, 7]\n",
-      "8 : [1, 2, 4, 8]\n",
-      "9 : [1, 3, 9]\n",
-      "10 : [1, 2, 5, 10]\n",
-      "11 : [1, 11]\n",
-      "12 : [1, 2, 3, 4, 6, 12]\n",
-      "13 : [1, 13]\n",
-      "14 : [1, 2, 7, 14]\n",
-      "15 : [1, 3, 5, 15]\n",
-      "16 : [1, 2, 4, 8, 16]\n",
-      "17 : [1, 17]\n",
-      "18 : [1, 2, 3, 6, 9, 18]\n",
-      "19 : [1, 19]\n",
-      "20 : [1, 2, 4, 5, 10, 20]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(1, 21):\n",
-    "    print(i, ':', factors(i))"
+    "def smallest_multiple(n):\n",
+    "    divisors = set.union(*[set(divisor(i)[:-1]) for i in range(2, n+1)])\n",
+    "    denominators = set(range(1, n)).difference(divisors)\n",
+    "    x = n\n",
+    "    while not all([x%i == 0 for i in denominators]):\n",
+    "        x += n\n",
+    "    return x\n",
+    "\n",
+    "assert smallest_multiple(10) == 2520"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2a3e52af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def smallest_multiple_fast():\n",
-    "    smallest_multiple = 20\n",
-    "    while True:\n",
-    "        if smallest_multiple % 20 == 0: # [1, 2, 4, 5, 10, 20]\n",
-    "            if smallest_multiple % 18 == 0: # [1, 2, 3, 6, 9, 18]\n",
-    "                if smallest_multiple % 16 == 0: # [1, 2, 4, 8, 16]\n",
-    "                    if smallest_multiple % 14 == 0: # [1, 2, 7, 14]\n",
-    "                        if smallest_multiple % 19 == 0: # [1, 19]\n",
-    "                            if smallest_multiple % 17 == 0: # [1, 17]\n",
-    "                                if smallest_multiple % 15 == 0: # [1, 3, 5, 15]\n",
-    "                                    if smallest_multiple % 13 == 0: # [1, 13]\n",
-    "                                        if smallest_multiple % 12 == 0: # [1, 2, 3, 4, 6, 12]\n",
-    "                                            if smallest_multiple % 11 == 0: # [1, 11]\n",
-    "                                                return smallest_multiple\n",
-    "        smallest_multiple += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "5902f55e",
+   "id": "536a5930",
    "metadata": {},
    "outputs": [
     {
@@ -178,32 +152,218 @@
        "232792560"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "smallest_multiple_fast()"
+    "# answer\n",
+    "smallest_multiple(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8179bac4",
+   "execution_count": 8,
+   "id": "20c655d1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.72 s ± 16.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.1 s ± 102 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o smallest_multiple_fast()\n",
-    "euler.save_benchmark(5, t)"
+    "# benchmark\n",
+    "%timeit smallest_multiple(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7b193ac",
+   "metadata": {},
+   "source": [
+    "### Solution 3 (denominator check )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4936b6b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divisor(n):\n",
+    "    d = [] # divisors\n",
+    "    i = 1\n",
+    "    while i <= n**.5:\n",
+    "        if (n%i == 0):\n",
+    "            if (n/i == i):\n",
+    "                d.append(i)\n",
+    "            else:\n",
+    "                d.extend([i, int(n/i)])\n",
+    "        i += 1\n",
+    "    return sorted(d)\n",
+    "\n",
+    "assert divisor(10) == [1, 2, 5, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1b4aa44f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def denominator_check(n, denominators):\n",
+    "    for d in denominators:\n",
+    "        if n%d == 0:\n",
+    "            continue\n",
+    "        else:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "assert denominator_check(10, [1, 2, 5, 10]) == True\n",
+    "assert denominator_check(15, [1, 2, 5, 10]) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "55705990",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallest_multiple(n):\n",
+    "    divisors = set.union(*[set(divisor(i)[:-1]) for i in range(2, n+1)])\n",
+    "    denominators = sorted(set(range(1, n)).difference(divisors), reverse=True)\n",
+    "    x = n\n",
+    "    while not denominator_check(x, denominators):\n",
+    "        x += n\n",
+    "    return x\n",
+    "\n",
+    "assert smallest_multiple(10) == 2520"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cb153919",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "smallest_multiple(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e41e025e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "851 ms ± 74 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit smallest_multiple(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1311dc5",
+   "metadata": {},
+   "source": [
+    "### Solution 4 (lcm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "28cb2fa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "math.lcm(*range(1, 21))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "46f2d5e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "907 ns ± 1.46 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit math.lcm(*range(1, 21))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55afb7fa",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d7359bfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "913 ns ± 16.2 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o math.lcm(*range(1, 21))\n",
+    "import euler\n",
+    "euler.save_benchmark(5, bm)"
    ]
   }
  ],
@@ -223,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
