--- a/python/problem_001.ipynb
+++ b/python/problem_001.ipynb
@@ -19,23 +19,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.11.9\n"
+      "Python 3.11.10\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "python --version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "619e624f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import euler"
    ]
   },
   {
@@ -48,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1821c250",
    "metadata": {},
    "outputs": [
@@ -58,7 +48,7 @@
        "233168"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "64484a18",
    "metadata": {},
    "outputs": [
@@ -78,14 +68,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.7 μs ± 151 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "12.5 μs ± 66.1 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "b = %timeit -o sum(set(range(3, 1000, 3)).union(set(range(5, 1000, 5))))\n",
-    "euler.save_benchmark(1, b)"
+    "%timeit sum(set(range(3, 1000, 3)).union(set(range(5, 1000, 5))))"
    ]
   },
   {
@@ -98,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "758aae29",
    "metadata": {},
    "outputs": [
@@ -108,7 +97,7 @@
        "233168"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "844f3d10",
    "metadata": {},
    "outputs": [
@@ -128,14 +117,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46.3 μs ± 150 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "44.6 μs ± 110 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "b = %timeit -o sum(i for i in range(1000) if i%3 == 0 or i%5 == 0)\n",
-    "euler.save_benchmark(1, b)"
+    "%timeit sum(i for i in range(1000) if i%3 == 0 or i%5 == 0)"
    ]
   },
   {
@@ -148,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "00800dc2",
    "metadata": {},
    "outputs": [
@@ -158,7 +146,7 @@
        "233168"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b31d0592",
    "metadata": {},
    "outputs": [
@@ -178,14 +166,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62.2 μs ± 1.3 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "61.4 μs ± 83.2 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "b = %timeit -o sum(filter(lambda x: x%3 == 0 or x%5 == 0, range(3, 1000)))\n",
-    "euler.save_benchmark(1, b)"
+    "%timeit sum(filter(lambda x: x%3 == 0 or x%5 == 0, range(3, 1000)))"
    ]
   },
   {
@@ -198,8 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "82d7a314",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiples(n):\n",
+    "    s = 0\n",
+    "    for i in range(3, n):\n",
+    "        if i%3 == 0 or i%5 == 0:\n",
+    "            s += i\n",
+    "    return s\n",
+    "\n",
+    "assert multiples(10) == 23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7ee7d19c",
    "metadata": {},
    "outputs": [
     {
@@ -215,14 +219,7 @@
    ],
    "source": [
     "# answer\n",
-    "def f():\n",
-    "    s = 0\n",
-    "    for i in range(3, 1000):\n",
-    "        if i%3 == 0 or i%5 == 0:\n",
-    "            s += i\n",
-    "    return s\n",
-    "\n",
-    "f()"
+    "multiples(1000)"
    ]
   },
   {
@@ -235,14 +232,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45 μs ± 1.16 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "45.1 μs ± 1.45 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "b = %timeit -o f()\n",
-    "euler.save_benchmark(1, b)"
+    "%timeit multiples(1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "705f0295",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5911be1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.6 μs ± 17.7 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o sum(set(range(3, 1000, 3)).union(set(range(5, 1000, 5))))\n",
+    "import euler\n",
+    "euler.save_benchmark(1, bm)"
    ]
   }
  ],
