--- a/python/problem_003.ipynb
+++ b/python/problem_003.ipynb
@@ -28,77 +28,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6ee77be3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sympy\n",
-    "import euler"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce2da826",
-   "metadata": {},
-   "source": [
-    "### Solution 1 (sympy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0d93ff13",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6857"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# answer\n",
-    "max(sympy.primefactors(600851475143))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "eea63904",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37.1 μs ± 773 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# benchmark\n",
-    "b = %timeit -o max(sympy.primefactors(600851475143))\n",
-    "euler.save_benchmark(3, b)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "02909f54",
    "metadata": {},
    "source": [
-    "### Solution 2 (sieve of eratosthenes)"
+    "### Solution 1 (sieve of eratosthenes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -115,12 +54,14 @@
     "\t\t\tfor p in D[q]: # move each witness to its next multiple\n",
     "\t\t\t\tD.setdefault(p+q,[]).append(p)\n",
     "\t\t\tdel D[q]       # no longer need D[q], free memory\n",
-    "\t\tq += 1"
+    "\t\tq += 1\n",
+    "\n",
+    "assert next(eratosthenes()) == 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "02c9b941",
    "metadata": {},
    "outputs": [],
@@ -133,13 +74,74 @@
     "        while n%prime == 0:\n",
     "            factors.append(prime)\n",
     "            n = int(n/prime)\n",
-    "    return factors"
+    "    return factors\n",
+    "\n",
+    "assert prime_factorization(13195) == [5, 7, 13, 29]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7d2ebc28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6857"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "max(prime_factorization(600851475143))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "98c18397",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.39 ms ± 6.58 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit max(prime_factorization(600851475143))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c01be65",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (sympy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7775f59b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7d2ebc28",
+   "id": "292f2db4",
    "metadata": {},
    "outputs": [
     {
@@ -155,27 +157,54 @@
    ],
    "source": [
     "# answer\n",
-    "max(prime_factorization(600851475143))"
+    "max(sympy.primefactors(600851475143))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "98c18397",
+   "id": "aca702ff",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.39 ms ± 5.76 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "36.6 μs ± 177 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "b = %timeit -o max(prime_factorization(600851475143))\n",
-    "euler.save_benchmark(3, b)"
+    "%timeit max(sympy.primefactors(600851475143))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a909473",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2c3e828f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.6 μs ± 369 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o max(sympy.primefactors(600851475143))\n",
+    "import euler\n",
+    "euler.save_benchmark(3, bm)"
    ]
   }
  ],
