--- a/julia/problem_001.ipynb
+++ b/julia/problem_001.ipynb
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  5.931 μs (21 allocations: 20.03 KiB)\n"
+      "  5.792 μs (21 allocations: 20.03 KiB)\n"
      ]
     },
     {
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  640.467 ns (0 allocations: 0 bytes)\n"
+      "  628.409 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.542 μs (6 allocations: 11.75 KiB)\n"
+      "  1.508 μs (6 allocations: 11.75 KiB)\n"
      ]
     },
     {
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  682.190 ns (0 allocations: 0 bytes)\n"
+      "  669.304 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -190,12 +190,30 @@
    "execution_count": 7,
    "id": "d8e497fa",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "function multiples(hi)\n",
+    "    s = 0\n",
+    "    for n ∈ 3:hi-1\n",
+    "        (n%3 == 0 || n%5 == 0) && (s += n)\n",
+    "    end\n",
+    "    return s\n",
+    "end\n",
+    "\n",
+    "@assert multiples(10) == 23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c8f0cabc",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  640.964 ns (0 allocations: 0 bytes)\n"
+      "  628.918 ns (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -209,15 +227,7 @@
     }
    ],
    "source": [
-    "function f()\n",
-    "    s = 0\n",
-    "    for n ∈ 3:999\n",
-    "        (n%3 == 0 || n%5 == 0) && (s += n)\n",
-    "    end\n",
-    "    return s\n",
-    "end\n",
-    "\n",
-    "@btime f()"
+    "@btime multiples(1000)"
    ]
   },
   {
@@ -225,19 +235,19 @@
    "id": "5507ba25",
    "metadata": {},
    "source": [
-    "### Save best performance"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "066e6afa",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\")\n",
-    "b = @benchmark sum(n for n in 3:999 if n%3 == 0 || n%5 == 0)\n",
-    "euler.save_benchmark(1, b);"
+    "bm = @benchmark sum(n for n in 3:999 if n%3 == 0 || n%5 == 0)\n",
+    "euler.save_benchmark(1, bm);"
    ]
   }
  ],
