--- a/julia/problem_002.ipynb
+++ b/julia/problem_002.ipynb
@@ -50,12 +50,30 @@
    "execution_count": 3,
    "id": "7d2ebc28",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "function fibonacci(n)\n",
+    "    fib_seq = [1, 2]\n",
+    "    while sum(fib_seq[end-1:end]) < n\n",
+    "        push!(fib_seq, sum(fib_seq[end-1:end]))\n",
+    "    end\n",
+    "    return fib_seq\n",
+    "end\n",
+    "\n",
+    "@assert fibonacci(100) == [1, 2, 3, 5, 8, 13, 21, 34, 55, 89]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "351a3c47",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.062 μs (129 allocations: 5.72 KiB)\n"
+      "  1.025 μs (129 allocations: 5.72 KiB)\n"
      ]
     },
     {
@@ -69,14 +87,6 @@
     }
    ],
    "source": [
-    "function fibonacci(n)\n",
-    "    fib_seq = [1, 2]\n",
-    "    while sum(fib_seq[end-1:end]) < n\n",
-    "        push!(fib_seq, sum(fib_seq[end-1:end]))\n",
-    "    end\n",
-    "    return fib_seq\n",
-    "end\n",
-    "\n",
     "@btime sum(filter(iseven, fibonacci(4_000_000)))"
    ]
   },
@@ -90,27 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e49959b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  150.252 ns (3 allocations: 176 bytes)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "4613732"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function sum_even_fib(n)\n",
     "    fib_seq = [1, 2]\n",
@@ -125,6 +118,33 @@
     "    return fib_sum\n",
     "end\n",
     "\n",
+    "@assert sum_even_fib(100) == 44"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e3f2f765",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  147.085 ns (3 allocations: 176 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4613732"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "@btime sum_even_fib(4_000_000)"
    ]
   },
@@ -133,12 +153,12 @@
    "id": "4457ab35",
    "metadata": {},
    "source": [
-    "### Save best performance"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "baf79c30",
    "metadata": {},
    "outputs": [],
