--- a/julia/problem_003.ipynb
+++ b/julia/problem_003.ipynb
@@ -34,7 +34,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Primes\n",
     "using BenchmarkTools"
    ]
   },
@@ -49,6 +48,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ee93432e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Primes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ebe9b788",
    "metadata": {},
    "outputs": [
@@ -78,19 +87,19 @@
    "id": "c091bb15",
    "metadata": {},
    "source": [
-    "### Save performance"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0e920213",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\");\n",
-    "b = @benchmark maximum(keys(Primes.factor(600851475143)))\n",
-    "euler.save_benchmark(3, b);"
+    "bm = @benchmark maximum(keys(Primes.factor(600851475143)))\n",
+    "euler.save_benchmark(3, bm);"
    ]
   }
  ],
