--- a/julia/problem_004.ipynb
+++ b/julia/problem_004.ipynb
@@ -50,12 +50,33 @@
    "execution_count": 3,
    "id": "55e46c00",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "function nsc(n)\n",
+    "    lo, hi = 10^(n-1), (10^n)-1\n",
+    "    palindrome_products = []\n",
+    "    for i in lo:hi, j in lo:hi\n",
+    "        if digits(i*j) == reverse(digits(i*j))\n",
+    "            push!(palindrome_products, i*j)\n",
+    "        end\n",
+    "    end\n",
+    "    return maximum(palindrome_products)\n",
+    "end\n",
+    "\n",
+    "@assert nsc(2) == 9009"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0040ff3c",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  58.828 ms (4864952 allocations: 253.22 MiB)\n"
+      "  65.501 ms (4864952 allocations: 253.22 MiB)\n"
      ]
     },
     {
@@ -69,18 +90,7 @@
     }
    ],
    "source": [
-    "function S1(n)\n",
-    "    lo, hi = 10^(n-1), (10^n)-1\n",
-    "    palindrome_products = []\n",
-    "    for i in lo:hi, j in lo:hi\n",
-    "        if digits(i*j) == reverse(digits(i*j))\n",
-    "            push!(palindrome_products, i*j)\n",
-    "        end\n",
-    "    end\n",
-    "    return maximum(palindrome_products)\n",
-    "end\n",
-    "\n",
-    "@btime S1(3)"
+    "@btime nsc(3)"
    ]
   },
   {
@@ -93,29 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d3d90ebf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  49.084 ms (4054952 allocations: 105.18 MiB)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "906609"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "function S2(n)\n",
+    "function ns(n)\n",
     "    lo, hi = 10^(n-1), (10^n)-1\n",
     "    palindrome_products = []\n",
     "    for i in lo:hi, j in lo:hi\n",
@@ -126,28 +119,20 @@
     "    return maximum(palindrome_products)\n",
     "end\n",
     "\n",
-    "@btime S2(3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0aa3f737",
-   "metadata": {},
-   "source": [
-    "### Solution 3 (minimize overhead)"
+    "@assert ns(2) == 9009"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "8b7d4a73",
+   "execution_count": 6,
+   "id": "a7ba7e84",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  20.349 ms (682569 allocations: 35.36 MiB)\n"
+      "  56.160 ms (4054952 allocations: 105.18 MiB)\n"
      ]
     },
     {
@@ -161,7 +146,25 @@
     }
    ],
    "source": [
-    "function S3(n)\n",
+    "@btime ns(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aa3f737",
+   "metadata": {},
+   "source": [
+    "### Solution 3 (product set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8b7d4a73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function ps(n)\n",
     "    lo, hi = 10^(n-1), (10^n)-1\n",
     "    lpp = 0 # largest palindrome product\n",
     "    for p in Set(i*j for i in lo:hi, j in lo:hi)\n",
@@ -173,7 +176,34 @@
     "    return lpp\n",
     "end\n",
     "\n",
-    "@btime S3(3)"
+    "@assert ps(2) == 9009"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aed35ec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  21.446 ms (682569 allocations: 35.36 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime ps(3)"
    ]
   },
   {
@@ -186,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "36080e24",
    "metadata": {},
    "outputs": [
@@ -194,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  24.550 ms (1137611 allocations: 47.51 MiB)\n"
+      "  26.551 ms (1137611 allocations: 47.51 MiB)\n"
      ]
     },
     {
@@ -216,18 +246,18 @@
    "id": "840c9fdb",
    "metadata": {},
    "source": [
-    "### Save best performance"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "3daef5f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\");\n",
-    "b = @benchmark S3(3)\n",
+    "b = @benchmark ps(3)\n",
     "euler.save_benchmark(4, b);"
    ]
   }
