--- a/python/problem_005.ipynb
+++ b/python/problem_005.ipynb
@@ -28,16 +28,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "570ff717",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1cc7e0f8",
    "metadata": {},
@@ -47,8 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4a53b3ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallest_multiple(n):\n",
+    "    x = n\n",
+    "    while not all([x%i == 0 for i in range(2, n)]):\n",
+    "        x += n\n",
+    "    return x\n",
+    "\n",
+    "assert smallest_multiple(10) == 2520"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8654830c",
    "metadata": {},
    "outputs": [
     {
@@ -64,12 +70,6 @@
    ],
    "source": [
     "# answer\n",
-    "def smallest_multiple(n):\n",
-    "    x = n\n",
-    "    while not all([x%i == 0 for i in range(2, n)]):\n",
-    "        x += n\n",
-    "    return x\n",
-    "\n",
     "smallest_multiple(20)"
    ]
   },
@@ -83,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.94 s ± 186 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "8.77 s ± 186 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.1 s ± 102 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "4.92 s ± 123 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -280,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "851 ms ± 74 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "853 ms ± 78.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -300,6 +300,16 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "494841bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "28cb2fa6",
    "metadata": {},
    "outputs": [
@@ -309,7 +319,7 @@
        "232792560"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "46f2d5e5",
    "metadata": {},
    "outputs": [
@@ -329,13 +339,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "907 ns ± 1.46 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "906 ns ± 1.16 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
     "%timeit math.lcm(*range(1, 21))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43fe898a",
+   "metadata": {},
+   "source": [
+    "### Solution 5 (lcm, denominators)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b4f50c85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "math.lcm(*range(11, 21))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f0d85df2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "518 ns ± 16.3 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit math.lcm(*range(11, 21))"
    ]
   },
   {
@@ -348,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "d7359bfa",
    "metadata": {},
    "outputs": [
@@ -356,12 +415,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "913 ns ± 16.2 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "513 ns ± 1.61 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "bm = %timeit -o math.lcm(*range(1, 21))\n",
+    "bm = %timeit -o math.lcm(*range(11, 21))\n",
     "import euler\n",
     "euler.save_benchmark(5, bm)"
    ]
