--- a/julia/problem_005.ipynb
+++ b/julia/problem_005.ipynb
@@ -5,145 +5,75 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 5\n",
+    "# Problem 5\n",
     "https://projecteuler.net/problem=5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2e00996e",
+   "id": "33087cca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3957408b",
-   "metadata": {},
-   "source": [
-    "#### Solution 1 (counter)"
+    "println(\"Julia v\", VERSION)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "55678f7f",
+   "id": "2e00996e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "smallest_multiple (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "function smallest_multiple(n)\n",
-    "    c = 1\n",
-    "    while !all([c%i == 0 for i in 1:n])\n",
-    "        c += 1\n",
-    "    end\n",
-    "    return c\n",
-    "end"
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24ed8404",
+   "metadata": {},
+   "source": [
+    "### Solution 1 (brute force / iterator)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "74d053d5",
+   "id": "58c04d06",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "232792560"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "smallest_multiple(20)"
+    "function smallest_multiple_bf(n) # brute force\n",
+    "    for c in Iterators.countfrom()\n",
+    "        all([c%i == 0 for i in 2:n]) && return c\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "@assert smallest_multiple_bf(10) == 2520"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff0a8190",
+   "id": "ef90bd3b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
-       " Single result which took \u001b[34m137.368 s\u001b[39m (1.28% GC) to evaluate,\n",
-       " with a memory estimate of \u001b[33m31.22 GiB\u001b[39m, over \u001b[33m1163962290\u001b[39m allocations."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark smallest_multiple(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "37d11515",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(5, b);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f32d962f",
-   "metadata": {},
-   "source": [
-    "#### Solution 2 (iterator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ae556c5e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "smallest_multiple (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function smallest_multiple(n)\n",
-    "    for c in Iterators.countfrom()\n",
-    "        all([c%i == 0 for i in 1:n]) && return c\n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "24dca935",
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  7.375 s (465585120 allocations: 17.34 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -155,21 +85,52 @@
     }
    ],
    "source": [
-    "smallest_multiple(20)"
+    "@btime smallest_multiple_bf(20) samples=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "499bf6f1",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (smart force / counter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "550f00d4",
+   "execution_count": 5,
+   "id": "cd51abc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function smallest_multiple_sf(n)\n",
+    "    c = n\n",
+    "    while !all([c%i == 0 for i in 2:n-1])\n",
+    "        c += n\n",
+    "    end\n",
+    "    return c\n",
+    "end\n",
+    "\n",
+    "@assert smallest_multiple_sf(10) == 2520"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e304a8a7",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  7.121 s (58198116 allocations: 1.56 GiB)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
-       " Single result which took \u001b[34m7.211 s\u001b[39m (12.84% GC) to evaluate,\n",
-       " with a memory estimate of \u001b[33m17.34 GiB\u001b[39m, over \u001b[33m465585120\u001b[39m allocations."
+       "232792560"
       ]
      },
      "metadata": {},
@@ -177,17 +138,177 @@
     }
    ],
    "source": [
-    "b = @benchmark smallest_multiple(20)"
+    "@btime smallest_multiple_sf(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "750695d1",
+   "metadata": {},
+   "source": [
+    "### Solution 3 (divisors / denominators)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "acb13455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function divisor(n)\n",
+    "    divisor_list = Int64[]\n",
+    "    n ≤ 0 && return divisor_list\n",
+    "    for d in 1:isqrt(n)+1\n",
+    "        if n%d == 0\n",
+    "            append!(divisor_list, [n÷d, d])\n",
+    "        end\n",
+    "    end\n",
+    "    return sort(unique(divisor_list))\n",
+    "end\n",
+    "\n",
+    "@assert divisor(10) == [1, 2, 5, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ea19ee9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function smallest_multiple_dd(n)\n",
+    "    divisors = Set(Set(divisor(i)[begin:end-1]) for i in 2:n)\n",
+    "    denominators = setdiff(Set(1:n), Set(number for sub_list in divisors for number in sub_list))\n",
+    "    x = n\n",
+    "    while !all([x%i == 0 for i in denominators])\n",
+    "        x += n\n",
+    "    end\n",
+    "    return x\n",
+    "end\n",
+    "\n",
+    "@assert smallest_multiple_dd(10) == 2520 \"Value should be 2520\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7ab458a3",
+   "id": "7c56d49b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  5.641 s (46558846 allocations: 1.39 GiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime smallest_multiple_dd(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "860d3474",
+   "metadata": {},
+   "source": [
+    "### Solution 4 (denominator check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9d12ed57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(5, b);"
+    "function divisor(n)\n",
+    "    divisor_list = Int64[]\n",
+    "    n ≤ 0 && return divisor_list\n",
+    "    for d in 1:isqrt(n)+1\n",
+    "        if n%d == 0\n",
+    "            append!(divisor_list, [n÷d, d])\n",
+    "        end\n",
+    "    end\n",
+    "    return sort(unique(divisor_list))\n",
+    "end\n",
+    "\n",
+    "@assert divisor(10) == [1, 2, 5, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a47c4bd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function denominator_check(n, denoms)\n",
+    "    for d in denoms\n",
+    "        n%d == 0 ? continue : return false\n",
+    "    end\n",
+    "    return true\n",
+    "end\n",
+    "\n",
+    "@assert denominator_check(10, [1, 2, 5, 10]) == true\n",
+    "@assert denominator_check(15, [1, 2, 5, 10]) == false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "828131e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function smallest_multiple_dd(n)\n",
+    "    divisors = Set(number for sub_list in Set(Set(divisor(i)[begin:end-1]) for i in 2:n) for number in sub_list)\n",
+    "    denominators = sort(collect(setdiff(Set(1:n-1), divisors)), rev=true)\n",
+    "    x = n\n",
+    "    while !denominator_check(x, denominators) == true\n",
+    "        x += n\n",
+    "    end\n",
+    "    return x\n",
+    "end\n",
+    "\n",
+    "@assert smallest_multiple_dd(10) == 2520 \"Value should be 2520\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8a4c9c35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  8.470 ms (362 allocations: 23.42 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime smallest_multiple_dd(20)"
    ]
   },
   {
@@ -195,15 +316,22 @@
    "id": "f2dfeda4",
    "metadata": {},
    "source": [
-    "#### Solution 3 (oneliner)"
+    "### Solution 5 (lcm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "4e5f25a7",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  312.671 ns (0 allocations: 0 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -215,28 +343,34 @@
     }
    ],
    "source": [
-    "lcm(1:20)"
+    "@btime lcm(1:20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fd4659d",
+   "metadata": {},
+   "source": [
+    "### Solution 6 (lcm, denominators)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ea3d423d",
+   "execution_count": 15,
+   "id": "10f29728",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  178.244 ns (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 236 evaluations.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m318.678 ns\u001b[22m\u001b[39m … \u001b[35m725.814 ns\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m319.386 ns               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m322.856 ns\u001b[22m\u001b[39m ± \u001b[32m 12.812 ns\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m0.00% ± 0.00%\n",
-       "\n",
-       "  \u001b[39m█\u001b[34m▇\u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m▂\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[39m▂\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▁\n",
-       "  \u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[32m▇\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▇\u001b[39m▆\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▆\u001b[39m▇\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▄\u001b[39m▄\u001b[39m▃\u001b[39m▃\u001b[39m▄\u001b[39m▄\u001b[39m▃\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▃\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▃\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▄\u001b[39m▂\u001b[39m▅\u001b[39m▄\u001b[39m▄\u001b[39m▄\u001b[39m▂\u001b[39m▃\u001b[39m▃\u001b[39m \u001b[39m█\n",
-       "  319 ns\u001b[90m        \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m        370 ns \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m0 bytes\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m0\u001b[39m."
+       "232792560"
       ]
      },
      "metadata": {},
@@ -244,23 +378,33 @@
     }
    ],
    "source": [
-    "b = @benchmark lcm(1:20)"
+    "@btime lcm(11:20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32937635",
+   "metadata": {},
+   "source": [
+    "### Save best performance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8ed27e8f",
+   "execution_count": 16,
+   "id": "0682c8e2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "include(\"./euler.jl\");\n",
+    "b = @benchmark lcm(11:20)\n",
     "euler.save_benchmark(5, b);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -268,7 +412,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
